2000-04-29  Dan Winship  <danw@helixcode.com>

	* mail-format.c (lookup_handler, etc): Improve the builtin vs
	bonobo selection code.
	(handle_mystery): Include name and Content-Description in the
	"mystery data" info, when available
	(handle_unknown_type): Call mail_identify_mime_part before
	giving up.
	(handle_undisplayable): Split out of handle_unknown_type now
	that handle_unknown_type can try alternate viewers.
	(handle_via_bonobo): Fall back to handle_undisplayable if the
	bonobo control fails.

	* mail-identify.c (mail_identify_mime_part): New function to
	attempt to identify a MIME part that we can't identify based on
	Content-Type alone.

	* mail-display.c (on_url_requested): redo the mystery data icon
	display stuff less kludgily.

2000-04-28  Dan Winship  <danw@helixcode.com>

	* mail-format.c (write_recipients_to_stream, write_headers,
	mail_generate_reply): Update (minimally) for Camel recipient
	changes.

2000-04-28  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (init_bonobo): Don't call `init_corba()' and don't get
	any args.
	(init_corba) [!USING_OAF]: Fix args.

2000-04-27  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c: New macro `CONTROL_FACTORY_ID', which
	is #defined to a different value according to whether we are
	`USING_OAF' or not.
	(folder_browser_factory_init): Use `CONTROL_FACTORY_ID'.

	* test-mail.c
	(init_corba): New helper function, implemented differently
	according to `USING_OAF'.
	(main): Use `init_corba()'.

	* main.c
	(init_corba): New helper function, implemented differently
	according to `USING_OAF'.
	(init_bonobo): Use `init_corba()'.

	* Makefile.am: Install OAF stuff if `USING_OAF'.  Add
	`-I$(datadir)/idl' to the `orbit-idl' command-line so that we can
	use Bonobo IDL files installed under our prefix as well.  Also,
	use `$(ORBIT_IDL)' instead of hardcoded `orbit-idl'.

	* evolution-mail.oafinfo: New file.

2000-04-27  Dan Winship  <danw@helixcode.com>
